--- a/resume.tex
+++ b/resume.tex
@@ -10,7 +10,6 @@
 %----------------------------------------------------------------------------------------
 
 \documentclass[a4paper,10pt]{article} % Default font size and paper size
-
 \usepackage{fontspec} % For loading fonts
 \defaultfontfeatures{Mapping=tex-text}
 \setmainfont{Fontin Regular} % Main document font
@@ -42,15 +41,16 @@
 %	NAME AND CONTACT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\par{\centering{\Huge Adarsh \textsc{KN}}\bigskip\par} % Your name
+\par{\centering{\Huge Kumudha KN}\bigskip\par} % Your name
 
 \section{Personal Details}
-
 \begin{tabular}{rl}
-\textsc{Date of Birth:} & 4 December 1990 \\
-\textsc{Address / Contact:} & Mobile: +91 9591847397 \\
-\textsc{Portfolio / Blog:} & \href{http://clweb.csa.iisc.ernet.in/res15/kumudha.kn/}{http://clweb.csa.iisc.ernet.in/res15/kumudha.kn/}\\
-\textsc{email:} & \href{mailto:kumudhakn@gmail.com}{kumudhakn@gmail.com}, \href{mailto:kumudha@iisc.ac.in}{kumudha@iisc.ac.in}
+Date of Birth: & 4 December 1990 \\
+Address / Contact: & Mobile: +91 9591847397 \\
+Portfolio / Blog: & \href{http://clweb.csa.iisc.ernet.in/res15/kumudha.kn/}{http://clweb.csa.iisc.ernet.in/res15/kumudha.kn/}\\
+email: & \href{mailto:kumudhakn@gmail.com}{kumudhakn@gmail.com}\\ 
+& \href{mailto:kumudha@iisc.ac.in}{kumudha@iisc.ac.in}\\
+&\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -61,30 +61,31 @@
 
 \begin{tabular}{rl}	
 \emph{Current} & \textbf{Indian Institute Of Science}, Bangalore, India\\
-& \textsc{M.Sc Engineering} | Dept of Computer Science and Automation (In Progress)\\
-& Research: \small\emph{High Performance Computing \& Compilers} | Advisor: Uday \textsc{Reddy}\\
-&\normalsize \textsc{Gpa}: 7.0/8.0\hyperlink{iisc}{\hfill | \footnotesize List of Courses}\\
+& M.Sc Engineering | Dept of Computer Science and Automation (In Progress)\\
+& Research: \small\emph{High Performance Computing \& Compilers} | Advisor: Uday Reddy\\
+&\normalsize GPA: 7.0/8.0\hyperlink{iisc}{\hfill | \footnotesize List of Courses}\\
 &\\
 
 %------------------------------------------------
 
-\textsc{May} 2012 & \textbf{M S Ramaiah Institute of Technology}, Bangalore, India\\
-& \textsc{Bachelor of Engineering} | Dept of Computer Science and Engineering \\
-&\normalsize \textsc{Gpa}: 9.92/10.0 \hyperlink{msrit}{\hfill| \footnotesize List of Courses}\\
+May 2012 & \textbf{M S Ramaiah Institute of Technology}, Bangalore, India\\
+& Bachelor of Engineering | Dept of Computer Science and Engineering \\
+&\normalsize GPA: 9.92/10.0 \hyperlink{msrit}{\hfill| \footnotesize List of Courses}\\
 &\\
 
 %------------------------------------------------
 
-\textsc{June} 2008 & \textbf{Vidya Mandir Pre-University College}, Malleshwaram, Bangalore, India\\
-& \textsc{Karnataka Pre-University Course (PUC)} \\
-&\normalsize \textsc{Percentage}: 90.83 (PCM: 95.33) \hyperlink{hs}{\hfill| \footnotesize List of Courses}\\
+June 2008 & \textbf{Vidya Mandir Pre-University College}, Malleshwaram, Bangalore, India\\
+& Karnataka Pre-University Course (PUC) \\
+&\normalsize Percentage: 90.83 (PCM: 95.33) \hyperlink{hs}{\hfill| \footnotesize List of Courses}\\
 &\\
 
 %------------------------------------------------
 
-\textsc{July} 2006 & \textbf{B P Indian Public School}, Malleshwaram, Bangalore, India\\
-& \textsc{ICSE 10}\textsuperscript{th} \\
-&\normalsize \textsc{Percentage}: 90.16 \\
+July 2006 & \textbf{B P Indian Public School}, Malleshwaram, Bangalore, India\\
+& ICSE 10\textsuperscript{th} \\
+&\normalsize Percentage: 90.16 \\
+&\\
 &\\
 \end{tabular}
 
@@ -95,40 +96,45 @@
 \section{Work Experience}
 
 \begin{tabular}{r|p{10cm}}
-\textsc{June 2012 to July 2015} & Technology Analyst at \textsc{Goldman Sachs}, Bangalore, India \\
+June 2012 to July 2015 & Technology Analyst at Goldman Sachs, Bangalore, India \\
 {(3 years 1 month)}& \emph{Investment Banking Technology}\\ 
-& \small {Application Infrastructure Team under Investment Banking Division (IBD) Technology} \\
+& \small {Application Infrastructure Team under the Investment Banking Division (IBD) Technology} \\
 & \small {Focused on building and standardizing frameworks in C\#, Java, .NET for
 applications developed in the division}\\
 & \\
 %------------------------------------------------
 
-\textsc{June 2011 to August 2011} & Summer Analyst at \textsc{Goldman Sachs}, Bangalore, India \\
+June 2011 to August 2011 & Summer Analyst at Goldman Sachs, Bangalore, India \\
 {(3 months)}& \small{Re-architected and enhanced the UI of a Reporting application.}\\
-& \footnotesize{ Received Pre-Placement offer for ``\emph{disctinctive}`` Performance }\\
+& \small{ Received Pre-Placement offer for ``\emph{disctinctive}`` Performance }\\
 & \\
 
 \end{tabular}
 
+\newpage
+
+%----------------------------------------------------------------------------------------
+%	Publications
+%----------------------------------------------------------------------------------------
 \section{Publications}
 \textbf{Optimizing Geometric Multigrid Method Computation using a DSL Approach}\\
 \small{Vinay Vasista, Kumudha KN, Siddharth Bhat, Uday Bondhugula} \\
-\small{The International Conference for High Performance Computing, Networking, Storage and Analysis, SuperComputing 2017 (To Appear)} \\
+\small{The International Conference for High Performance Computing, Networking, Storage and Analysis. SuperComputing 2017 (To Appear)} \\
 
 
 \textbf{An Empirical Comparative Study and Optimization of the Hadoop Scheduler} \\
 \small{Jayalakshmi DS, Kumudha KN, Tejala T, Veena Pilli}\\
 \small{International Conference on Emerging Trends in Electrical, Electronics and 
 Communication Technologies-ICECIT, 2012, pgs 350-356,2012}
-
-\newpage
+\\
+\\
 %----------------------------------------------------------------------------------------
 %	SOFTWARE and Hardware proficiency
 %----------------------------------------------------------------------------------------
 
 \section{Software \& Hardware Proficiency}
 \begin{tabular}{rl}
-\textsc{Software} & \tabitem \textit{Compiler Tools:} isl, Barvinok, Pluto\\
+Software & \tabitem \textit{Compiler Tools:} isl, Barvinok, Pluto\\
 & \tabitem \textit{DNN Frameworks:} Caffe, Latte\\
 & \tabitem \textit{Architectural Simulators:} gem5-gpu, gem5\\
 & \tabitem \textit{Programming Languages:} C, C++, Java, Python, Hibernate, Spring, C\#,\\
@@ -143,7 +149,7 @@ Communication Technologies-ICECIT, 2012, pgs 350-356,2012}
 
 &\\
 
-\textsc{Hardware}  & \tabitem Hardware Accelerators \\
+Hardware  & \tabitem Hardware Accelerators \\
 & ~~~~Intel MIC (XeonPhi KNC) and NVIDIA GPGPUs (Fermi, Kepler) \\
 & \tabitem Micro-Architecture of Modern x86 CPUs\\
 & ~~~~(Nehalem / Westmere, SandyBridge / IvyBridge, Haswell) \\ 
@@ -158,184 +164,109 @@ Communication Technologies-ICECIT, 2012, pgs 350-356,2012}
 \section{Positions Held}
 
 \begin{tabular}{lr}
-\tabitem Student System Admin at CSA Department, IISc & Aug 2014 - present \\
+\tabitem Teaching Assistant for Compiler Design (E0256,) IISc  & Jan 2016 - Apr 2016 \\
 &\\
-\tabitem Technology Analyst - 01 at Goldman Sachs & Nov 2013 - Jul 2014\\
+\tabitem Member of Department Curriculum Committee &  2016 - 2017\\
 &\\
-\tabitem New Analyst Technology Associate at Goldman Sachs & Jun 2012 - Nov 2013\\
+\tabitem Representative for Student Welfare Committee  & 2016 - 2017\\
 &\\
-\tabitem Teaching Associate for the CUDA Teaching Centre,  & Jan 2012 - May 2012\\
-~~~~sponsored by NVIDIA, at the Department of CSE, MSRIT &  \\
+\tabitem Member of Women in Technology (WiT), Goldman Sachs  & 2013 - 2015\\
 &\\
-\tabitem Chairman of VRGLINUG (GNU/Linux users group at MSRIT) & 2011-12 \\
+\tabitem Technology Analyst at Goldman Sachs Nov 2013 - Jul 2015 & Nov 2013 - Jul 2015 \\
 &\\
-\tabitem Secretary and member of executive committee of IEEE-MSRIT & 2011-12 \\
-&\\
-\tabitem Been an influential Member of several committees & 2011-12 \\
-~~~~RoboMSR, Android AppDev Group, CodeMSRIT, & \\
-~~~~Assoc of Computer Engineers (ACE) & \\
+\tabitem New Analyst Technology Associate at Goldman Sachs & Jun 2012 - Nov 2013 \\
 &\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
 %	PROJECTS 
 %----------------------------------------------------------------------------------------
-
 \section{Projects}
-
-\begin{tabular}{rl}
-\textsc{Projects at} & \textbf{Integrated Heterogeneous System (IHS) Architecture with shared} \\
-\textsc{INDIAN INSTITUTE} & \textbf{Die-Stacked DRAM Cache \qquad \qquad [Paper submitted, Best Poster EECS'17]} \\
-\textsc{OF SCIENCE} & ~~~Modern processors chips have heterogeneous processors, intergrating multi-\\
-& ~~~core CPUs \& general purpose accelerator GPUs on the same die. These IHS\\
-& ~~~require larger \& faster memory to improve overall system performance. Die-\\
-& ~~~stacking technology allows high bandwidth and lower latency DRAM to be\\
-& ~~~integrated close to the processor. Using this memory as shared cache brings\\
-& ~~~novel challenges in resource sharing and request scheduling due to the\\
-& ~~~architectural heterogeneity in these IHS processors which has varied implications\\
-& ~~~on performance of the latency sensitive CPUs vs throughput oriented GPGPUs.\\
-& \\
-& \textbf{TLB and Pagewalk Performance in Multicore Architectures with} \\
-& \textbf{Large Die-Stacked DRAM Cache \qquad [TO BE PUBLISHED]}\\
-& ~~~The die-stacking technology promises a large capacity DRAMs, in\\
-& ~~~the order of GBs, closer to processors. With such large capacity caches\\
-& ~~~the amount of data that can be accessed without causing a TLB fault\\
-& ~~~i.e. the reach of a TLB, (which is a few MBs on modern X86 processors)\\
-& ~~~becomes severely inadequate. TLBs are on the critical path for data access\\
-& ~~~and incurring an expensive page walk can hinder system performance,\\
-& ~~~especially when data requested is already resident (hit) in the LLC.\\
-& ~~~\href{http://adar.sh/tlb-pagewalk}{http://adar.sh/tlb-pagewalk}\\
-& \\
-& \textbf{Compiler Optimization Transforms 2: Caffe Neural Networks}\\
-& ~~~The work focuses on 2 applications in Caffe - MNIST and CIFAR10. \\
-& ~~~By using loop parallelization transforms \& tiling, performance of these \\
-& ~~~Neural Network applications is improved for multicore machines. \\
-& ~~~We obtain speedup of between 1.8X-3X over best baseline implementation.\\
-& ~~~This work also compares thread scaling characteristics and layer wise \\
-& ~~~timing distribution on AMD and Intel multicores vs GPUs.\\
-& ~~~\href{http://adar.sh/caffe-compiler-optimize}{http://adar.sh/caffe-compiler-optimize}\\
-& \\
-& \textbf{Compiler Optimization Transforms 1: Harris Corner Detection}\\
-& ~~~This work optimizes and tunes the Harris corner detection algorithm for \\
-& ~~~performance using locality, vectorization and multithreading transforms. \\
-& ~~~We obtain a speedup for 14.6X over OpenCV library implementation and \\
-& ~~~11.3X over unparallelized reference implementation.\\
-& ~~~This work also studies performance of GCC 4.9 vs Intel ICC 15.0\\
-& ~~~for vectorization and code generation optimization performed by them.\\
-& ~~~\href{http://adar.sh/compiler-optimize}{http://adar.sh/compiler-optimize}\\
-& \\
-& \textbf{VarMutate:Dynamic Scoping for C Language in clang}\\
-& ~~~Implemented Dynamic Scoping for C in the clang/LLVM compiler\\
-& ~~~via a single pass algorithm that implements shallow binding.\\
-& ~~~It scans the AST generated and does a source-to-source transform\\
-& ~~~to convert a given program to dynamic scoped program.\\
-& ~~~\href{http://adar.sh/VarMutate}{http://adar.sh/VarMutate} \\
-& \\
-& \textbf{A Study of Branch Prediction in Android} \\
-& ~~~We focus on Hardware Branch Prediction and aim to understand\\
-& ~~~the interplay for User and Kernel mode branches in Android\\
-& ~~~in light of features like minimize \& background app refresh\\
-& ~~~Simulated ARM CortexA8 chipset with ARMv7-A architecture profile\\
-& ~~~\& ran Moby Mobile Benchmark suite on customized gem5 simulator\\
-& ~~~\href{http://adar.sh/BranchPredAndroid}{ http://adar.sh/BranchPredAndroid} \\
+\begin{tabular}{rp{11cm}}
 &\\
-& \textbf{Plan IKEBANA: ESS Dimensions Reduction for Plan Bouquet} \\
-& ~~~Ranking Error Prone Selectivity Dimensions by impact on Plan\\
-& ~~~Bouquet style query execution i.e. execution of query by discovering \\
-& ~~~selectivity at run time by executing series of cost limited plans.\\
-& ~~~\href{http://adar.sh/PlanIkebana}{http://adar.sh/PlanIkebana}\\
+Projects at & \textbf{Optimizing Geometric Multigrid Method Computation using a DSL Approach} \\
+INDIAN INSTITUTE & \hspace{25em} \textbf{[To Appear in SC 2017]} \\
+OF SCIENCE 
+& \setlength{\leftskip}{0.4cm}
+The Geometric Multigrid (GMG) method is widely used in numerical analysis to accelerate the convergence of partial differential equations solvers using
+a hierarchy of grid discretizations. However, multiple grid sizes and recursive 
+expression of multigrid cycles make the task of program optimization tedious.
+A high-level language that aids domain experts (productivity) for GMG with
+effective optimization and parallelization support (performance) is thus valuable.\\
 & \\
-
-\end{tabular}
-\begin{tabular}{rl}
-\textsc{Projects at}  &  \textbf{Architect, design, implement and sustain solutions} of various  \\
-\textsc{GOLDMAN SACHS} &  Virtualization \& Linux technologies spanning Compute, Storage \\
-& and Networking. \\
+& \\
+& \textbf{Optimizing Dense Linear Algebra Kernels for Scientific Applications} \\
+& \hspace{25em} \textbf{[Work in Progress]}\\
+& \setlength{\leftskip}{0.4cm}
+Linear algebra kernels constitute an important part of the computation in domains like deep neural networks, scientific computing, media processing and many others. A Domain specific language which provides high performance and aids in productivity is thus very useful.\\
+& \\
+& \\
+& \textbf{Evaluating Performance Overheads in Program execution of Scripting Languages under Virtual Machine Environment} \\
+& \setlength{\leftskip}{0.4cm}
+Scripting languages are widely used among statisticians and data miners for developing statistical software and data analysis. They are run on virtual machines which are either interpreted or compiled just-in-time during execution. This work evaluates the overheads associated with the execution of MATLAB scripting languages under McVM virtual machine environment.\\
+& \\
+& \\
+& \textbf{Parallelize and optimize the CAFFE DNN framework on a multicore CPU}\\
+& \setlength{\leftskip}{0.4cm}
+CAFFE is one of the early frameworks for deep neural networks. CAFFE accepts a configuration containing the neural network topology and can perform both training, testing and inference. CAFFE has support for executing  on both CPUs and GPUs hardware. We optimize the CPU version of Caffe to improve its performance using loop transforms for extracting parallelism.\\
+& \\
+& \\
+& \textbf{Optimizations for Image Processing Pipeline} \\
+& \setlength{\leftskip}{0.4cm}
+Hand optimization of image processing pipelines like unsharp mask, harris corner detection, max\_filter, etc on multi-core CPUs. These optimization included loop permutation, tiling for cache locality and parallelism.\\
 &\\
-& \textbf{Hardware and OS Performance Benchmarking \& Analysis}\\
-& \tabitem Authored an Automated benchmarking framework to run \\
-& ~~~~and report performance by running various test suite on \\
-& ~~~~VMs and Baremetals in bash\\
-& \tabitem Test Suites include – SpecJBB, kmake, blacksholes, Dhrystone, \\
-& ~~~~Whetstone, Hackbench, Disk tests, Network uperf, lat proc \\
-& \tabitem Performance analysis \& tuning for specialized internal apps \\
-& ~~~( e.g. Low Latency, high I/O, memory, network intensive )\\
+& \\
+& \textbf{Integrated Heterogeneous System (IHS) Architecture with shared Die Stacked DRAM Cache} \\
+& \setlength{\leftskip}{0.4cm}
+Modern processors chips integrate multi-core CPUs and general purpose accelerator GPUs on the same die. These IHS processors have high bandwidth requirement and large working sets.\\
+& \setlength{\leftskip}{0.4cm} 
+Die-stacking technology allows high bandwidth and large capacity DRAM to be integrated close to the processor. Using this memory as shared cache brings novel challenges in resource sharing and request scheduling due to the architectural heterogeneity. This has has varied implications on performance of the latency sensitive CPUs vs throughput oriented GPGPUs.\\
 &\\
-& \textbf{Linux Containers} \\
-& \tabitem Architecting and implementing Image based and Host based App \\
-& ~~~~Containers for Goldman Sachs Cloud within RHEL 7 \\
-& \tabitem Possess a good understanding of underlying technology \\
-& ~~~~Namespaces, Cgroups, SELinux, Libvirt API for Management, \\
-& ~~~~Network configuration using TUN/TAP Dev\\
-&\\
-& \textbf{Thin client on desktop for VDI solution} \\
-& \tabitem Engineered a Linux based solution – Minimized and locked down \\
-& \tabitem Authored several PyGTK and X11 based applications for remote \\
-& ~~~~management, diagnostics, troubleshooting and NEA \\
-& \tabitem Network booted, kickstart and preseed based unsupervised install \\
-& ~~~~Next generation to include stateless RAM-based network boot on\\ & ~~~~ARM based hardware including Raspberry Pi. \\
-& \\
-&\\
-& \textbf{Nested Virtualization} \\
-& \tabitem Engineered NV as a security solution using Bromium vSentry \\
-& \\
-& Well versed in \textbf{PXE / TFTP boot} infrastructure. \\
-& \\
-& Regular \textbf{Vendor Interaction and liaising} – Intel, VMware, Redhat \\
-&\\
-&\\
-&\\
-\textsc{Projects at} & \textit{“Spoken Language Identification using Machine Learning"}\\ 
-\textsc{M S Ramaiah} & under Prof. K.G.Srinivasa as final year project\\
-\textsc{Inst of Tech} & \href{http://adar.sh/spokenlang}{http://adar.sh/spokenlang}\\
-& \\
-& \textit{“Intelligent systems for Network Intrusion Detection System"} \\ 
-& facilitated and financed by DRDO under Prof. K.G.Srinivasa\\
-& Paper Published at ICECIT 2012 titled \\
-& "SNIDS: An Intelligent \& Multiclass Support Vector Machines Based NIDS" \\
-& \href{http://adar.sh/S-NIDS}{http://adar.sh/S-NIDS} \\
-& \\
-& Mini project on “Line Birds” – a computer graphics project \\
-& implemented using OpenGL library under Prof D S Jayalakshmi \\
-& \href{http://adar.sh/linebird}{http://adar.sh/linebird}\\
-& \\
-& Mini project on “Implementation of parallel algorithm for Max Flow \\
-& Algorithm using Ford-Fulkerson method” on Advanced Comp Arch \\
-& under Asst Prof. Parkavi \\
-& \\
-& Project on “e-Blood Bank” a Database Systems Application Project \\
-& under Asst. Prof. Arul Kumar \\
-& \\
-& Lead developer of the team that created “ANDROMEDA - MSRIT Linux” \\
-& \\
-& \\
-& \\
 \end{tabular}
 
+\begin{tabular}{rp{11cm}}
+Projects at  &  \textbf{Re-architecting of resource discovery system} \\
+GOLDMAN SACHS &  \tabitem Technologies used: WPF, WCF, .NET 3.5, SQL Server, IIS7, VS2010 \\
+& \tabitem WPF for the front end with complete MVVM model\\
+& \tabitem WCF service hosted on IIS7 to act as the model layer\\
+& \tabitem Framework application to display, store \& edit other app config data \\
+&\\
+& \textbf{Entitlements System}\\
+& \tabitem Technologies used: .NET 3.5, Windows Form, WCF, Windows Service\\
+& \tabitem Project followed strict OOP principle\\
+& \tabitem Central system to store the entitlements information for various apps\\
+&\\
+& \textbf{Framework Library} \\
+& \tabitem Technologies used: Spring, jdk 1.7, Eclipse\\
+& \tabitem POJO and Spring java client for the various REST services \\ 
+& \\
+& Inherited several C\# projects and was responsible for all the sustenance and continued development / enhancements of the same\\
+&\\
+Projects at & \textbf{A comparative Study and Optimization of Hadoop Scheduler [ICECIT 2012]}\\ 
+M S Ramaiah & \setlength{\leftskip}{0.4cm} Hadoop is a general-purpose system that enables high-performance process-\\
+Inst of Tech & \setlength{\leftskip}{0.4cm}
+ing  of data over a set of distributed nodes. This work focuses on an empirical comparison of the default Hadoop scheduler with Fair scheduler and Capacity scheduler for data intensive applications. We determine suitable schedulers for different class of workloads. Further, we propose improvements over the above schedulers and evaluate  the same.\\ 
+& \\
+& Mini project on “Walking Robot” in OpenGL under Prof. DS Jayalakshmi (2011)\\ 
+& Mini project of “File Transfer in C\#, .NET” under Prof. Kavitha Jayaram (2010)\\
+& Database project “Tourism Information system” under Prof. Arul Kumar (2010)\\
+& \\
+\end{tabular}
+\\
 %----------------------------------------------------------------------------------------
 % Achievements
 %----------------------------------------------------------------------------------------
 
 \section{Achievements}
-%~\\
-\tabitem Best Poster at Electrical Science Division Symposium (EECS '17) at IISc, Bangalore \\
+\tabitem Secured distinction in Bharatanatyam Junior Exam  \\
 \\
-\tabitem Represented IISc at 12 hour stadium relay run Bengaluru 2016 (22 km in 2 hours)\\
+\tabitem Awarded the \textit{“First rank and Gold medal of 2012 batch”} from the Department of Computer Science, M S Ramaiah Institute of Technology.\\
 \\
-\tabitem Completed with Certificate of distinction several MooC Data Science Courses from Johns Hopkins University on Coursera\\
+\tabitem Lead the Blood Donation Camp event at MSRIT which achieved the largest volume of blood collected in the Bangalore region\\
 \\
-\tabitem \textit{"Best outgoing achiever of 2012 batch”} from the Dept. of Computer Science \& Engg. at \mbox{M S Ramaiah Instiute of Technology} \\
+\tabitem Certificate course in Web Development conducted by IEEE \\
 \\
-\tabitem First Place at the National Level Project Competition \& Exhibition held at M S Ramaiah Institute of Technology for project “Spoken Language Identification using Machine Learning”\\
-\\
-\tabitem Second Place at “Random Hacks of Kindness \#2” hackathon (2010)\\
-\\
-\tabitem IBM Certified DB2 9 Database and Application Fundamentals (2011)\\
-\tabitem IBM Certified Rational Functional Tester(RFT) for Java (2011)\\
-\tabitem Certificate course in “Java Programming” from NIIT-Bangalore by Sun Microsystems (2009)\\
-\\
-\tabitem Field study titled “Microneedles for medical advancement” as a part of the MEMS course which was recognized by the Staff Council of IEEE MSRIT.\\
-\tabitem Credited broad course electives like “Micro-Electro Mechanical Systems (MEMS)”, \\“Digital Signal Processing” and “Supply Chain Management” at MSRIT \\
+\tabitem Undertaken a course on “Supply Chain Management” from Mechanical Dept. of MSRIT\\
 \\
 %----------------------------------------------------------------------------------------
 
@@ -345,21 +276,13 @@ Communication Technologies-ICECIT, 2012, pgs 350-356,2012}
 
 \section{Co and extra curricular activities}
 %~\\
-\tabitem Routinely participate in competitive timed runs including TCS World 10k, Bengaluru 10k Challenge, Standard Chartered Mumbai Marathon, Bengaluru Marathon etc. \\ {\footnotesize My personal best times are - \textit{5k(22mins), \space 10k(48mins) and half marathon (1:55hrs)} }\\
+\tabitem Routinely perform in several stage dance events including concerts at Bugle Rock Park Basavanagudi, Our School Auditorium, Banashankari Temple, Sripuram Golden Temple Vellore, Andal Temple Srivilliputhur\\
 \\
-\tabitem Periodically author blog articles about my experiences, assessments and outlooks related to my work and hobbies \\
+\tabitem Conducted technology and networking events for Interns at Goldman Sachs (2015)\\
 \\
-\tabitem Web Design, Development and treasurer for Samanway 2014 - Career fair at IISc \\
+\tabitem Routinely organized activities and events like Blood Donation, notebook drive, school camps for the underprivileged etc, as part of National Service Scheme (NSS) at MSRIT\\
 \\ 
-\tabitem Member of the Environment committee at Goldman Sachs, regularly conducting awareness drives and camps \\
-\\
-\tabitem One of few Indians amongst participants from all around the world on a Scholarship Delegation to attend TEDxSummit in Doha, Qatar representing TEDxMSRIT \\
-\\
-\tabitem TEDx licensee, TED Translator, 1600 TEDCred holder and organizer of TEDxMSRIT \\
-\tabitem Involved in various communities and organizing of “Pycon India 2010” and “Random Hacks of Kindness \#4” held in MSRIT\\
-%~\tabitem Lead organiser of “Ignite” (annual Tech Fest at MSRIT) and “Aavishkaar” (annual inter-collegiate IEEE-MSRIT tech fest\\\\
-\tabitem Active Volunteer for Association of Computer Engineers (ACE), IEEE-MSRIT and have been instrumental in organizing several fests and events (2008-2011)\\
-\tabitem Delegated at various conferences and Workshops - IEEE International Parallel \& Distributed Processing Symposium (IPDPS 2015), Open Hack India 2010/2011, PYCON India 2010,\\ FOSSEE Science and Engineering, Microsoft Dream Spark India, Wikipedia Bangalore Meet-ups, Mobile Camps to name a few\\
+\tabitem Delegated at various conferences and Workshops\\
 \\
 
 %----------------------------------------------------------------------------------------
@@ -370,27 +293,29 @@ Communication Technologies-ICECIT, 2012, pgs 350-356,2012}
 
 \section{Miscellaneous}
 \begin{tabular}{rl}
-\textsc{Strengths} & \tabitem Adaptability, Quick learner, Hardworking and Dedication\\
+Languages & English (fluent), Tamil (native), Kannada (native), Hindi (intermediate)\\
+&\\
+Strengths & \tabitem Adaptability, Quick learner, Hardworking and Dedication\\
 & \tabitem Effective communicator and good leadership skills \\
-& \tabitem Always updated with latest technology and trends of market.\\
+& \tabitem Updated with latest technology and trends of market.\\
 & \tabitem Analytical and Mathematical Problem Solving, Designing Algorithms \\
 & ~~~~and practical Solutions to given problems \\
 & \\
-\textsc{Hobbies} & \tabitem An avid Running, cycling and Swimming enthusiast\\
-& \tabitem Reading Major Tech News sites, dailies and magazines [LFY, Digit, Chip, etc.] \\
-& \tabitem Programming, Solving challenging problems either conceptually or programtically \\
+Hobbies & \tabitem An avid classical dance enthusiast and practicioner\\
+& \tabitem A genuine penchant for reading novels from crime, thriller and drama genre\\
+& \tabitem Programming, Solving challenging problems either conceptually or programmatically \\
 & \\
-\textsc{Other Links} & \href{https://github.com/kumudhan}{github.com/kumudhan} \\
+Other Links & \href{https://github.com/kumudhan}{github.com/kumudhan} \\
 & \href{http://in.linkedin.com/in/kumudha-narasimhan}{in.linkedin.com/in/kumudha-narasimhan}\\
 &\\
-\textsc{References} & \textbf{Academic References} \\
-& Prof. R Govindarajan, Guide \\
-& Professor and Chairman SERC, IISc\\
-& govind@serc.iisc.ernet.in \\
+References & \textbf{Academic References} \\
+& Dr. Uday Reddy, Guide \\
+& Assistant Professor CSA, IISc\\
+& uday@iisc.ac.in \\
 &\\
-& Prof. K G Srivinvas, Mentor / Guide  \\
-& Professor and Head of Dept. CSE, MSRIT \\
-& kgsrinivas@msrit.edu \\
+& Mrs. D S Jayalakshmi, Mentor / Guide  \\
+& Associate Professor Dept. CSE, MSRIT \\
+& jayalakshmids@msrit.edu\\
 &\\
 
 & \textbf{Industry References} \\
@@ -409,15 +334,14 @@ Communication Technologies-ICECIT, 2012, pgs 350-356,2012}
 
 \begin{center}
 \begin{tabular}{lcc}
-\multicolumn{1}{c}{\textsc{Course}} & \textsc{Grade}&\textsc{Credit}\\ \hline
-Database Management Systems & A & 4\\
+\multicolumn{1}{c}{Course} & Grade&Credit\\ \hline
 Computer Architecture & A & 4\\
-Design and Analysis of Algorithms & C & 4\\
-Compiler Design (NOT IN RTP) & B & -\\
+Design and Analysis of Algorithms & B & 4\\
+Advanced Compilers & S & 4\\
 Final Thesis & In & Progress\\
 &&\\
-& Total & 16\\\cline{2-3}
-&\textsc{Gpa}&\textbf{6.33}
+& Total & 12\\\cline{2-3}
+&GPA&\textbf{7.0}
 \end{tabular}
 \end{center}
 \bigskip
@@ -443,8 +367,8 @@ Final Thesis & In & Progress\\
 &\\
 \multicolumn{2}{c}{\large{\centering Electives\par}} \\ 
 &\\
-\tabitem Artificial Intelligence  & \tabitem Supply Chain Management  \\
-\tabitem Digital Signal Processing & \tabitem Micro-Electro Mechanical Systems\\
+\tabitem .NET and C\#  & \tabitem Supply Chain Management  \\
+\tabitem Advanced Mathematics I & \tabitem Advanced Mathematics II\\
 \end{tabular}
 \end{center}
 \bigskip
@@ -454,13 +378,13 @@ Final Thesis & In & Progress\\
 
 \bigskip
 
-\par{\centering\Large \hypertarget{hs}{Higher Secondary (Sindhi High School, CBSE) }\par}
+\par{\centering\Large \hypertarget{hs}{Higher Secondary (Vidya Mandir PU College, PUC Board) }\par}
 \begin{center}
 \large{Primary Courses\par}
 \normalsize
 Physics, Chemistry, Mathematics, Computer Science \\
 ~\\
-\large{Languages\par}
+\large{Languages in Curriculum\par}
 \normalsize
 Hindi, English \\
 \end{center}
