re-arranging some sections, some formatting

--- a/resume.tex
+++ b/resume.tex
@@ -61,7 +61,7 @@ email: & \href{mailto:kumudhakn@gmail.com}{kumudhakn@gmail.com}\\
 
 \section{Education}
 
-\begin{tabular}{rl}	
+\begin{tabular}{rp{13cm}}
 \emph{Current} & \textbf{Indian Institute Of Science}, Bangalore, India\\
 & M.Sc Engineering | Dept of Computer Science and Automation (In Progress)\\
 & Research: \small\emph{High Performance Computing \& Compilers} | Advisor: Uday Reddy\\
@@ -133,8 +133,8 @@ Communication Technologies \\ ICECIT, 2012, pgs 350-356,2012}
 %----------------------------------------------------------------------------------------
 
 \section{Software \& Hardware Proficiency}
-\begin{tabular}{rl}
-Software & \tabitem \textit{Compiler Tools:} isl, Barvinok, Pluto\\
+\begin{tabular}{p{3cm}l}
+SOFTWARE & \tabitem \textit{Compiler Tools:} isl, Barvinok, Pluto\\
 & \tabitem \textit{DNN Frameworks:} Caffe, Latte\\
 & \tabitem \textit{Architectural Simulators:} gem5-gpu, gem5\\
 & \tabitem \textit{Development Platforms:} Eclipse, VI / VIM, Visual Studio, gedit, TexStudio\\
@@ -144,12 +144,13 @@ Software & \tabitem \textit{Compiler Tools:} isl, Barvinok, Pluto\\
 & \tabitem \textit{Libraries:} CUDA, OpenMP, OpenGL  \\
 & \tabitem \textit{Tools:} \LaTeX\ , git, svn, gdb, Intel VTune\\
 & \tabitem \textit{Database:} MySQL, Oracle, SQL Server\\
-& \tabitem \textit{Programming Languages:} C, C++, Java, Python, Hibernate, Spring, C\#, .NET, ASP, WPF, WCF, shell scripting\\
+& \tabitem \textit{Programming Languages:} C, C++, Java, Python, Hibernate, Spring, C\#, \\
+& ~~~~.NET, ASP, WPF, WCF, shell scripting\\
 %& ~~~~.NET, ASP, .NET, WPF, WCF, shell scripting\\
 
 &\\
 
-Hardware  & \tabitem Hardware Accelerators \\
+HARDWARE  & \tabitem Hardware Accelerators \\
 & ~~~~Intel MIC (XeonPhi KNC) and NVIDIA GPGPUs (Fermi, Kepler) \\
 & \tabitem Micro-Architecture of Modern x86 CPUs\\
 & ~~~~(Nehalem / Westmere, SandyBridge / IvyBridge, Haswell) \\ 
@@ -158,26 +159,6 @@ Hardware  & \tabitem Hardware Accelerators \\
 \end{tabular}
 \\
 \\
-%----------------------------------------------------------------------------------------
-%	POSITIONS HELD
-%----------------------------------------------------------------------------------------
-
-\section{Positions Held}
-
-\begin{tabular}{p{12cm}r}
-\tabitem Teaching Assistant for Compiler Design (E0256,) IISc  & Jan 2016 - Apr 2016 \\
-&\\
-\tabitem Member of Department Curriculum Committee &  2016 - 2017\\
-&\\
-\tabitem Representative for Student Welfare Committee  & 2016 - 2017\\
-&\\
-\tabitem Member of Women in Technology (WiT), Goldman Sachs  & 2013 - 2015\\
-&\\
-\tabitem Technology Analyst at Goldman Sachs Nov 2013 - Jul 2015 & Nov 2013 - Jul 2015 \\
-&\\
-\tabitem New Analyst Technology Associate at Goldman Sachs & Jun 2012 - Nov 2013 \\
-&\\
-\end{tabular}
 
 %----------------------------------------------------------------------------------------
 %	PROJECTS 
@@ -200,23 +181,23 @@ effective optimization and parallelization support (performance) is thus valuabl
 & \hspace{25em} \textbf{[Work in Progress]}\\
 & \setlength{\leftskip}{0.4cm}
 Linear algebra kernels constitute an important part of the computation in domains like deep neural networks, scientific computing, media processing and many others. A Domain specific language which provides high performance and aids in productivity is thus very useful.\\
-\end{tabular}
-
-\section{Projects}
-\begin{tabular}{rp{13cm}}
-Projects at IISc& \textbf{Evaluating Performance Overheads in Program execution of Scripting Languages under Virtual Machine Environment} \\
+&\\
+& \textbf{Evaluating Performance Overheads in Program execution of Scripting Languages under Virtual Machine Environment} \\
 & \setlength{\leftskip}{0.4cm}
 Scripting languages are widely used among statisticians and data miners for developing statistical software and data analysis. They are run on virtual machines which are either interpreted or compiled just-in-time during execution. This work evaluates the overheads associated with the execution of MATLAB scripting languages under McVM virtual machine environment.\\
 & \\
 & \textbf{Parallelize and optimize the CAFFE DNN framework on a multicore CPU}\\
 & \setlength{\leftskip}{0.4cm}
 CAFFE is one of the early frameworks for deep neural networks. CAFFE accepts a configuration containing the neural network topology and can perform both training, testing and inference. CAFFE has support for executing  on both CPUs and GPUs hardware. We optimize the CPU version of Caffe to improve its performance using loop transforms for extracting parallelism.\\
-& \\
+&\\
 & \textbf{Optimizations for Image Processing Pipeline} \\
 & \setlength{\leftskip}{0.4cm}
 Hand optimization of image processing pipelines like unsharp mask, harris corner detection, max\_filter, etc on multi-core CPUs. These optimization included loop permutation, tiling for cache locality and parallelism.\\
-& \\
-& \textbf{Integrated Heterogeneous System (IHS) Architecture with shared Die Stacked DRAM Cache} \\
+\end{tabular}
+
+\section{Projects}
+\begin{tabular}{rp{13cm}}
+Projects at IISc& \textbf{Integrated Heterogeneous System (IHS) Architecture with shared Die Stacked DRAM Cache} \\
 & \setlength{\leftskip}{0.4cm}
 Modern processors chips integrate multi-core CPUs and general purpose accelerator GPUs on the same die. These IHS processors have high bandwidth requirement and large working sets.\\
 & \setlength{\leftskip}{0.4cm} 
@@ -252,6 +233,29 @@ ing  of data over a set of distributed nodes. This work focuses on an empirical 
 & \\
 \end{tabular}
 \\
+
+%----------------------------------------------------------------------------------------
+%	POSITIONS HELD
+%----------------------------------------------------------------------------------------
+
+\section{Positions Held}
+
+\begin{tabular}{p{12cm}r}
+\tabitem Teaching Assistant for Compiler Design (E0256,) IISc  & Jan 2016 - Apr 2016 \\
+&\\
+\tabitem Member of Department Curriculum Committee &  2016 - 2017\\
+&\\
+\tabitem Representative for Student Welfare Committee  & 2016 - 2017\\
+&\\
+\tabitem Member of Women in Technology (WiT), Goldman Sachs  & 2013 - 2015\\
+&\\
+\tabitem Technology Analyst at Goldman Sachs Nov 2013 - Jul 2015 & Nov 2013 - Jul 2015 \\
+&\\
+\tabitem New Analyst Technology Associate at Goldman Sachs & Jun 2012 - Nov 2013 \\
+&\\
+\end{tabular}
+
+\newpage
 %----------------------------------------------------------------------------------------
 % Achievements
 %----------------------------------------------------------------------------------------
