updated hardware proficiency

--- a/resume.tex
+++ b/resume.tex
@@ -150,10 +150,10 @@ SOFTWARE & \tabitem \textit{Compiler Tools:} isl, Barvinok, Pluto\\
 
 &\\
 
-HARDWARE  & \tabitem Hardware Accelerators \\
-& ~~~~Intel MIC (XeonPhi KNC) and NVIDIA GPGPUs (Fermi, Kepler) \\
-& \tabitem Micro-Architecture of Modern x86 CPUs\\
-& ~~~~(Nehalem / Westmere, SandyBridge / IvyBridge, Haswell) \\ 
+HARDWARE  & \tabitem Programming and Architecture of Accelerators \\
+& ~~~~Intel MIC (XeonPhi KNC) and NVIDIA Fermi GPGPUs, Google TPU \\
+& \tabitem Micro-Architecture and Efficient Programming of Modern x86 CPUs\\
+& ~~~~Intell Xeon (SandyBridge, IvyBridge, Haswell) \\ 
 & \tabitem 8051 based Micro-controller Programming \\
 &\\
 \end{tabular}
