--- a/resume.tex
+++ b/resume.tex
@@ -19,7 +19,7 @@
 \usepackage[usenames,dvipsnames]{xcolor} % Required for specifying custom colors
 
 \usepackage[big]{layaureo} % Margin formatting of the A4 page, an alternative to layaureo can be 
-\addtolength{\voffset}{-1.3cm}
+\addtolength{\voffset}{-0.7cm}
 \addtolength{\hoffset}{-0.7cm}
 \addtolength{\textwidth}{2cm}
 \addtolength{\textheight}{2cm}
@@ -54,11 +54,10 @@ Portfolio / Blog: & \href{http://clweb.csa.iisc.ernet.in/res15/kumudha.kn/}{http
 email: & \href{mailto:kumudhakn@gmail.com}{kumudhakn@gmail.com}\\ 
 & \href{mailto:kumudha@iisc.ac.in}{kumudha@iisc.ac.in}\\
 \end{tabular}
-
+\\
 %----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
-
 \section{Education}
 
 \begin{tabular}{rp{13cm}}
@@ -89,18 +88,17 @@ July 2006 & \textbf{B P Indian Public School}, Malleshwaram, Bangalore, India\\
 &\normalsize Percentage: 90.16 \\
 &\\
 \end{tabular}
-
+\\
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE 
 %----------------------------------------------------------------------------------------
-
 \section{Work Experience}
 
 \begin{tabular}{r|p{12cm}}
 June 2012 to July 2015 & Technology Analyst at Goldman Sachs, Bangalore, India \\
-{(3 years 1 month)}& \emph{Investment Banking Technology}\\ 
+{(3 years 1 month)}& \emph{Investment Banking Division, Technology}\\ 
 & \small {Application Infrastructure Team under the Investment Banking Division (IBD) Tech} \\
-& \small {Focused on building and standardizing frameworks in C\#, Java, .NET for
+& \small {Focused on building and standardizing frameworks in C\# .NET and Java for
 applications developed in the division}\\
 & \\
 %------------------------------------------------
@@ -111,8 +109,7 @@ June 2011 to August 2011 & Summer Analyst at Goldman Sachs, Bangalore, India \\
 & \\
 
 \end{tabular}
-
-
+\\
 %----------------------------------------------------------------------------------------
 %	Publications
 %----------------------------------------------------------------------------------------
@@ -144,14 +141,14 @@ SOFTWARE & \tabitem \textit{Compiler Tools:} isl, Barvinok, Pluto\\
 & \tabitem \textit{Libraries:} CUDA, OpenMP, OpenGL  \\
 & \tabitem \textit{Tools:} \LaTeX\ , git, svn, gdb, Intel VTune\\
 & \tabitem \textit{Database:} MySQL, Oracle, SQL Server\\
-& \tabitem \textit{Programming Languages:} C, C++, Java, Python, Hibernate, Spring, C\#, \\
+& \tabitem \textit{Programming Languages:} C, C++, Python, Java, Hibernate, Spring, C\#, \\
 & ~~~~.NET, ASP, WPF, WCF, shell scripting\\
 %& ~~~~.NET, ASP, .NET, WPF, WCF, shell scripting\\
 
 &\\
 
 HARDWARE  & \tabitem Programming and Architecture of Accelerators \\
-& ~~~~Intel MIC (XeonPhi KNC) and NVIDIA Fermi GPGPUs, Google TPU \\
+& ~~~~Intel MIC (XeonPhi KNC) and NVIDIA Fermi and Volta GPGPUs, Google TPU \\
 & \tabitem Micro-Architecture and Efficient Programming of Modern x86 CPUs\\
 & ~~~~Intell Xeon (SandyBridge, IvyBridge, Haswell) \\ 
 & \tabitem 8051 based Micro-controller Programming \\
@@ -188,7 +185,7 @@ Scripting languages are widely used among statisticians and data miners for deve
 & \\
 & \textbf{Parallelize and optimize the CAFFE DNN framework on a multicore CPU}\\
 & \setlength{\leftskip}{0.4cm}
-CAFFE is one of the early frameworks for deep neural networks. CAFFE accepts a configuration containing the neural network topology and can perform both training, testing and inference. CAFFE has support for executing  on both CPUs and GPUs hardware. We optimize the CPU version of Caffe to improve its performance using loop transforms for extracting parallelism.\\
+CAFFE is one of the early frameworks for deep neural networks. CAFFE accepts a configuration containing the neural network topology and can perform training, testing and inference. CAFFE has support for executing  on both CPUs and GPUs. We optimize the CPU version of Caffe to improve its performance using loop transforms for extracting parallelism.\\
 &\\
 & \textbf{Optimizations for Image Processing Pipeline} \\
 & \setlength{\leftskip}{0.4cm}
@@ -201,7 +198,7 @@ Projects at IISc& \textbf{Integrated Heterogeneous System (IHS) Architecture wit
 & \setlength{\leftskip}{0.4cm}
 Modern processors chips integrate multi-core CPUs and general purpose accelerator GPUs on the same die. These IHS processors have high bandwidth requirement and large working sets.\\
 & \setlength{\leftskip}{0.4cm} 
-Die-stacking technology allows high bandwidth and large capacity DRAM to be integrated close to the processor. Using this memory as shared cache brings novel challenges in resource sharing and request scheduling due to the architectural heterogeneity. This has has varied implications on performance of the latency sensitive CPUs vs throughput oriented GPGPUs.\\
+Die-stacking technology allows high bandwidth and large capacity DRAM to be integrated close to the processor. Using this memory as shared cache brings novel challenges in resource sharing and request scheduling due to the architectural heterogeneity. This has varied implications on performance of the latency sensitive CPUs vs throughput oriented GPGPUs.\\
 &\\
 &\\
 Projects at  &  \textbf{Re-architecting of resource discovery system} \\
@@ -215,10 +212,14 @@ GOLDMAN SACHS &  \tabitem Technologies used: WPF, WCF, .NET 3.5, SQL Server, IIS
 & \tabitem Project followed strict OOP principle\\
 & \tabitem Central system to store the entitlements information for various apps\\
 &\\
+& \textbf{AngularJS Customization} \\
+& \tabitem Technologies used: AngularJS, Jasmine, REST Service\\
+& \tabitem Developed custom directives and providers which have a common use case across all the applications (like person lookup) \\ 
+&\\
 & \textbf{Framework Library} \\
 & \tabitem Technologies used: Spring, jdk 1.7, Eclipse\\
 & \tabitem POJO and Spring java client for the various REST services \\ 
-& \\
+&\\
 & Inherited several C\# projects and was responsible for all the sustenance and continued development / enhancements of the same\\
 &\\
 &\\
@@ -261,11 +262,11 @@ ing  of data over a set of distributed nodes. This work focuses on an empirical 
 %----------------------------------------------------------------------------------------
 
 \section{Achievements}
-\tabitem Secured distinction in Bharatanatyam Junior Exam  \\
+\tabitem Secured distinction in Bharatanatyam Junior Exam (2015)  \\
 \\
 \tabitem Awarded the \textit{“First rank and Gold medal of 2012 batch”} from the Department of Computer Science, M S Ramaiah Institute of Technology.\\
 \\
-\tabitem Lead the Blood Donation Camp event at MSRIT which achieved the largest volume of blood collected in the Bangalore region\\
+\tabitem Lead the Blood Donation Camp event at MSRIT which achieved the largest volume of blood collected in the Bangalore region (2011)\\
 \\
 \tabitem Certificate course in Web Development conducted by IEEE \\
 \\
@@ -279,7 +280,7 @@ ing  of data over a set of distributed nodes. This work focuses on an empirical 
 
 \section{Co and extra curricular activities}
 %~\\
-\tabitem Routinely perform in several stage dance events including concerts at Bugle Rock Park Basavanagudi, Our School Auditorium, Banashankari Temple, Sripuram Golden Temple Vellore, Andal Temple Srivilliputhur\\
+\tabitem Routinely performed in several stage dance events including concerts at Bugle Rock Park Basavanagudi, Our School Auditorium, Banashankari Temple, Sripuram Golden Temple Vellore, Andal Temple Srivilliputhur\\
 \\
 \tabitem Conducted technology and networking events for Interns at Goldman Sachs (2015)\\
 \\
@@ -298,7 +299,7 @@ ing  of data over a set of distributed nodes. This work focuses on an empirical 
 \begin{tabular}{rl}
 Languages & English (fluent), Tamil (native), Kannada (native), Hindi (intermediate)\\
 &\\
-Strengths & \tabitem Adaptability, Quick learner, Hardworking and Dedication\\
+Strengths & \tabitem Adaptability, Quick learner, Hardworking and Dedicated\\
 & \tabitem Effective communicator and good leadership skills \\
 & \tabitem Updated with latest technology and trends of market.\\
 & \tabitem Analytical and Mathematical Problem Solving, Designing Algorithms \\
