--- a/resume.tex
+++ b/resume.tex
@@ -52,16 +52,43 @@ Date of Birth: & 4 December 1990 \\
 Address / Contact: & Mobile: +91 9591847397 \\
 Portfolio / Blog: & \href{http://clweb.csa.iisc.ernet.in/res15/kumudha.kn/}{http://clweb.csa.iisc.ernet.in/res15/kumudha.kn/}\\
 email: & \href{mailto:kumudhakn@gmail.com}{kumudhakn@gmail.com}\\ 
-& \href{mailto:kumudha@iisc.ac.in}{kumudha@iisc.ac.in}\\
+%& \href{mailto:kumudha@iisc.ac.in}{kumudha@iisc.ac.in}\\
 \end{tabular}
 \\
+
+%----------------------------------------------------------------------------------------
+%	WORK EXPERIENCE 
+%----------------------------------------------------------------------------------------
+\section{Work Experience}
+
+\begin{tabular}{r|p{12cm}}
+July 2018 to Current & Senior Software Engineer at Samsung Research India, Bangalore \\
+{(9 months)}& \emph{IoT Division}\\
+& \small {Tizen studio infrastructure development and maintenance}\\
+& \\
+
+June 2012 to July 2015 & Technology Analyst at Goldman Sachs, Bangalore, India \\
+{(3 years 1 month)}& \emph{Investment Banking Division, Technology}\\ 
+& \small {Application Infrastructure Team. Focused on building and standardizing frameworks in C\# .NET and Java for
+applications developed in the division}\\
+& \\
+%------------------------------------------------
+
+June 2011 to August 2011 & Summer Analyst at Goldman Sachs, Bangalore, India \\
+{(3 months)}& \small{Re-architected and enhanced the UI of a Reporting application.}\\
+& \small{ Received Pre-Placement offer for ``\emph{distinctive}`` Performance }\\
+& \\
+
+\end{tabular}
+\\
+
 %----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 \section{Education}
 
 \begin{tabular}{rp{13cm}}
-\emph{Current} & \textbf{Indian Institute Of Science}, Bangalore, India\\
+June 2018 & \textbf{Indian Institute Of Science}, Bangalore, India\\
 & M.Sc Engineering | Dept of Computer Science and Automation (In Progress)\\
 & Research: \small\emph{High Performance Computing \& Compilers} | Advisor: Uday Reddy\\
 &\normalsize GPA: 7.0/8.0\hyperlink{iisc}{\hfill | \footnotesize List of Courses}\\
@@ -90,33 +117,12 @@ July 2006 & \textbf{B P Indian Public School}, Malleshwaram, Bangalore, India\\
 \end{tabular}
 \\
 %----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE 
-%----------------------------------------------------------------------------------------
-\section{Work Experience}
-
-\begin{tabular}{r|p{12cm}}
-June 2012 to July 2015 & Technology Analyst at Goldman Sachs, Bangalore, India \\
-{(3 years 1 month)}& \emph{Investment Banking Division, Technology}\\ 
-& \small {Application Infrastructure Team under the Investment Banking Division (IBD) Tech} \\
-& \small {Focused on building and standardizing frameworks in C\# .NET and Java for
-applications developed in the division}\\
-& \\
-%------------------------------------------------
-
-June 2011 to August 2011 & Summer Analyst at Goldman Sachs, Bangalore, India \\
-{(3 months)}& \small{Re-architected and enhanced the UI of a Reporting application.}\\
-& \small{ Received Pre-Placement offer for ``\emph{distinctive}`` Performance }\\
-& \\
-
-\end{tabular}
-\\
-%----------------------------------------------------------------------------------------
 %	Publications
 %----------------------------------------------------------------------------------------
 \section{Publications}
 \textbf{Optimizing Geometric Multigrid Method Computation using a DSL Approach}\\
 \small{Vinay Vasista, Kumudha KN, Siddharth Bhat, Uday Bondhugula} \\
-\small{The International Conference for High Performance Computing, Networking, Storage and Analysis. \\ SuperComputing 2017 (To Appear)} \\
+\small{The International Conference for High Performance Computing, Networking, Storage and Analysis. \\ SuperComputing 2017} \\
 
 
 \textbf{An Empirical Comparative Study and Optimization of the Hadoop Scheduler} \\
@@ -150,7 +156,7 @@ SOFTWARE & \tabitem \textit{Compiler Tools:} isl, Barvinok, Pluto\\
 HARDWARE  & \tabitem Programming and Architecture of Accelerators \\
 & ~~~~Intel MIC (XeonPhi KNC) and NVIDIA Fermi and Volta GPGPUs, Google TPU \\
 & \tabitem Micro-Architecture and Efficient Programming of Modern x86 CPUs\\
-& ~~~~Intell Xeon (SandyBridge, IvyBridge, Haswell) \\ 
+& ~~~~Intel Xeon (SandyBridge, IvyBridge, Haswell) \\ 
 & \tabitem 8051 based Micro-controller Programming \\
 &\\
 \end{tabular}
@@ -164,7 +170,7 @@ HARDWARE  & \tabitem Programming and Architecture of Accelerators \\
 \begin{tabular}{rp{13cm}}
 &\\
 Projects at & \textbf{Optimizing Geometric Multigrid Method Computation using a DSL Approach} \\
-INDIAN INSTITUTE & \hspace{25em} \textbf{[To Appear in SC 2017]} \\
+INDIAN INSTITUTE & \hspace{25em} \textbf{[SC 2017]} \\
 OF SCIENCE 
 & \setlength{\leftskip}{0.4cm}
 The Geometric Multigrid (GMG) method is widely used in numerical analysis to accelerate the convergence of partial differential equations solvers using
@@ -174,10 +180,10 @@ A high-level language that aids domain experts (productivity) for GMG with
 effective optimization and parallelization support (performance) is thus valuable.\\
 & \\
 & \\
-& \textbf{Optimizing Dense Linear Algebra Kernels for Scientific Applications} \\
-& \hspace{25em} \textbf{[Work in Progress]}\\
+& \textbf{Optimizing Dense Matrix Computations with Polymage } \\
+& \hspace{25em} \textbf{[Under Preparation]}\\
 & \setlength{\leftskip}{0.4cm}
-Linear algebra kernels constitute an important part of the computation in domains like deep neural networks, scientific computing, media processing and many others. A Domain specific language which provides high performance and aids in productivity is thus very useful.\\
+Matrix computations constitute an important part in domains like deep neural networks, scientific computing, media processing and many others. A Domain specific language which provides high performance and aids in productivity is thus very useful.\\
 &\\
 & \textbf{Evaluating Performance Overheads in Program execution of Scripting Languages under Virtual Machine Environment} \\
 & \setlength{\leftskip}{0.4cm}
@@ -262,6 +268,8 @@ ing  of data over a set of distributed nodes. This work focuses on an empirical 
 %----------------------------------------------------------------------------------------
 
 \section{Achievements}
+\tabitem Cleared Samsung Professional level exam in first attempt \\
+\\
 \tabitem Secured distinction in Bharatanatyam Junior Exam (2015)  \\
 \\
 \tabitem Awarded the \textit{“First rank and Gold medal of 2012 batch”} from the Department of Computer Science, M S Ramaiah Institute of Technology.\\
@@ -280,7 +288,7 @@ ing  of data over a set of distributed nodes. This work focuses on an empirical 
 
 \section{Co and extra curricular activities}
 %~\\
-\tabitem Routinely performed in several stage dance events including concerts at Bugle Rock Park Basavanagudi, Our School Auditorium, Banashankari Temple, Sripuram Golden Temple Vellore, Andal Temple Srivilliputhur\\
+\tabitem Routinely performed in several stage dance events including concerts at Ravindra Kalakshetra, Bugle Rock Park Basavanagudi, Our School Auditorium, Banashankari Temple, Sripuram Golden Temple Vellore and Andal Temple Srivilliputhur\\
 \\
 \tabitem Conducted technology and networking events for Interns at Goldman Sachs (2015)\\
 \\
@@ -302,12 +310,12 @@ Languages & English (fluent), Tamil (native), Kannada (native), Hindi (intermedi
 Strengths & \tabitem Adaptability, Quick learner, Hardworking and Dedicated\\
 & \tabitem Effective communicator and good leadership skills \\
 & \tabitem Updated with latest technology and trends of market.\\
-& \tabitem Analytical and Mathematical Problem Solving, Designing Algorithms \\
-& ~~~~and practical Solutions to given problems \\
+& \tabitem Analytical and mathematical problem solving, designing algorithms \\
+& ~~~~and practical solutions to given problems \\
 & \\
 Hobbies & \tabitem An avid classical dance enthusiast and practitioner\\
 & \tabitem A genuine penchant for reading novels from crime, thriller and drama genre\\
-& \tabitem Programming, Solving challenging problems either conceptually or programmatically \\
+%& \tabitem Programming, Solving challenging problems either conceptually or programmatically \\
 & \\
 Other Links & \href{https://github.com/kumudhan}{github.com/kumudhan} \\
 & \href{http://in.linkedin.com/in/kumudha-narasimhan}{in.linkedin.com/in/kumudha-narasimhan}\\
